hphp/hack/test/typecheck/parse_int_with_underscore_bad4.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class Foo {
  const int c = 0_x12;
}
